@@ -16,12 +16,9 @@ $Id$
 0) Configuration in BizzWikiSettings.php
 1) TODO special page...
 2) Internationalization...
- 
 3) Partitioning of NS_IMAGE namespace i.e. since the the problem is about files in the filesystem,
    it comes down to partitioning the filesystem space for this namespace
-   
 4) Delegation functionality: the capability for user X to delegate rights to user Y
-
 5) User space partitioning: keep user groups separated under all circumstances
 6) Table creation: integration with overall installation process
    Special page for sg table creation??
@@ -66,8 +63,8 @@ $Id$
 * ImageLink        -> YES
 * MiscParserFunctions -> YES
 
-
 == Rights Management ==
+* Integrate 'ConfirmAccount' extension
 * "Grant Right" functionality
 ** see Manual:$wgAddGroups
 ** see Manual:$wgRemoveGroups
@@ -99,10 +96,7 @@ $Id$
 
 == Presentation Layer ==
 * Short URL
-* Integrate 'PageAfterAndBefore' extension
 * JS form elements validation helper class
-* 'AutoIncludeScripts': detects which JS scripts to include (TBD)
-** Probably can live with a template which uses 'AddScriptCss' extension
 
 == DynamicPageList2 ==
 * TODO Integration 'DynamicPageList2' extension
