@@ -162,3 +162,5 @@ REL1_10_8: (released 23July2007)
 REL1_10_9: (released ...) 
 - Added 'MiscParserFunctions' extension
 - Added 'ImageLink' extension
+- Added 'PageAfterAndBefore' extension
+- 
